clusters/talos-robbinsdale/apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
  type: LoadBalancer
  loadBalancerIP: 10.69.32.32 # Ensure this IP is within your LoadBalancer's allowed range
  ports:
    - name: plex-tcp-32400
      port: 32400
      protocol: TCP
      targetPort: 32400
    - name: plex-udp-1900
      port: 1900
      protocol: UDP
      targetPort: 1900
    - name: plex-tcp-3005
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: plex-udp-5353
      port: 5353
      protocol: UDP
      targetPort: 5353
    - name: plex-tcp-8324
      port: 8324
      protocol: TCP
      targetPort: 8324
    - name: plex-udp-32410
      port: 32410
      protocol: UDP
      targetPort: 32410
    - name: plex-udp-32412
      port: 32412
      protocol: UDP
      targetPort: 32412
    - name: plex-udp-32413
      port: 32413
      protocol: UDP
      targetPort: 32413
    - name: plex-udp-32414
      port: 32414
      protocol: UDP
      targetPort: 32414
    - name: plex-tcp-32469
      port: 32469
      protocol: TCP
      targetPort: 32469
