clusters/talos-robbinsdale/apps/media/plex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "plex.rajsingh.info"
    - "plex.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
